--- a/client/src/components/CustNav/components/AnonOpts/AnonOpts.module.scss
+++ b/client/src/components/CustNav/components/AnonOpts/AnonOpts.module.scss
@@ -1,52 +1,52 @@
 @import "../../../../theme.scss";
 
 .button {
-    color: white;
-    padding: 0.5em 1.8em;
-    font-size: 1.15rem;
+    color: var(--white);
+    padding: 0.5em 1.5em;
+    font-size: 1.1rem;
     text-transform: capitalize;
+    font-weight: 700;
     margin: 0.5em;
 
     @media (max-width: 1400px) {
-        padding: 0.5em 1em;
+        padding: 0.5em 0.9em;
         margin: 0.3em;
     }
 
     @media (max-width: 980px) {
-        padding: 0.5em 0.7em;
+        padding: 0.4em 0.6em;
         margin: 0.25em;
     }
 
     @media (max-width: 780px) {
-        padding: 0.4em 0.5em;
+        padding: 0.3em 0.5em;
         margin: 0.2em;
-        font-size: 1rem;
     }
 }
 
 .signUp {
     @extend .button;
-    background-color: $dark-green;
+    background-color: var(--dark-green);
 
     &:hover {
-        background-color: $light-green;
+        background-color: var(--light-neon-green);
     }
 }
 
 
 .signIn {
     @extend .button;
-    background-color: $light-green;
+    background-color: var(--light-neon-green);
 
     &:hover {
-        background-color: $dark-green;
+        background-color: var(--dark-green);
     }
 }
 
-.menu:hover { background-color: rgb(233, 233, 233);}
+.menu:hover { background-color: #ebebeb; }
 
 .menuItem {
     text-decoration: none;
-    color: $dark-green;
+    color: #105157;
     font-size: 1.1rem;
 }
