--- a/client/src/components/CustNav/components/GenericLink/GenericLink.module.scss
+++ b/client/src/components/CustNav/components/GenericLink/GenericLink.module.scss
@@ -1,36 +1,38 @@
 @import "../../../../theme.scss";
 
+
 .link-style {
     font-size: 1.2rem;
-    padding: 0.5em;
-    margin: 1em 2em;
-    color: $dark-green;
+    color: var(--dark-green);
     font-weight: 600;
     background: linear-gradient(
-        $light-green, $light-green
+        var(--light-green), var(--light-green)
     ) center bottom;
     // bg width and height
     background-size: 0% 0.1em; 
     background-repeat:no-repeat;
     text-decoration: none;
+    padding: 1em;
+    margin: 0 0.8em; 
+    
+    @media (max-width: 1280px) {
+        margin: 0.4em;
+        padding: 0.4em;
+    }
+
+    @media (max-width: 1080px) {
+        font-size: 1rem;
+    }
 }
 
 .genericLinks {
     @extend .link-style;
+
     transition: ease-in-out 0.2s;
 
     &:hover {
         background-size: 100% 0.15em;
-        color: $light-green;
-    }
-
-    @media (max-width: 1400px) {
-        margin: 0 0.5em; 
-      }
-
-    @media (max-width: 980px) {
-        padding: 0.3em;
-        margin: 0 0.3em; 
+        color: var(--light-green);
     }
 }
 
